<resources>
    <string name="app_name">WorldMate</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="your_matches">Your Matches</string>
    <string name="questions">Questions</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="i_am">Gender</string>
    <string name="men">Male</string>
    <string name="women">Female</string>
    <string name="you_must_pick_a_gender">You must pick a gender</string>
    <string name="my_birthday_is">My birthday is</string>

    <string-array name="multi_entries">
        <item>"Men"</item>
        <item>"Women"</item>
    </string-array>

    <string-array name="multi_values">
        <item>"male"</item>
        <item>"female"</item>
    </string-array>
    <string name="continue_str">Continue</string>
    <string name="messaging">Messages</string>
    <string name="name_of_profile">Name of profile</string>
    <string name="enter_your_text_here">Enter your text here...</string>
    <string name="receive_message">Receive Message</string>
    <string name="date_and_hour">date_and_hour</string>
    <string name="send_message">Send Message</string>
    <string name="pick_categories">Select categories</string>
    <string name="sport">sport</string>
    <string name="food">food</string>
    <string name="culture">culture</string>
    <string name="music">music</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="match">Match!</string>
    <string name="you_got_a_new_match">You got a new match!</string>
    <string name="choose_your_profile_picture">Profile Picture</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="prefernce_str">Prefernces</string>
    <string name="discovery_str">Discovery</string>
    <string name="allowing_other_users_to_see_you">allowing other users to see your profile</string>
    <string name="looking_for_str">Looking For:</string>
    <string name="maximum_distance_str">Maximum Distance:</string>
    <string name="_20_km_str">20 Km</string>
    <string name="age_range_str">Age Range:</string>
    <string name="age_int">26</string>
    <string name="city_str">City</string>
    <string name="change_profile_photo_str">Change profile photo</string>
    <string name="done_str">Done</string>
    <string name="gender_str_with">Gender:</string>
    <string name="about_myself_str">About myself</string>
    <string name="looking_for">Looking for</string>
    <string name="my_hobbies">My hobbies</string>
    <string name="title">Title</string>
    <string name="_90_compability">90%</string>
    <string name="my_description_str">My description</string>
    <string name="question_str">question</string>
    <string name="select_category_str">Select category</string>
    <string name="sport_cap_lett">Sport</string>
    <string name="food_cap_lett">Food</string>
    <string name="culture_cap_lett">Culture</string>
    <string name="music_cap_lett">Music</string>
    <string name="sign_in_str">Sign in</string>
    <string name="e_mail_str">E-mail</string>
    <string name="password_str">Password</string>
    <string name="invalid_credentials_str">Invalid Credentials</string>
    <string name="login_str">Login</string>
    <string name="forgot_password_str">Forgot Password?</string>
    <string name="don_t_have_account_str">Don\'t have account ?</string>
    <string name="sign_up_str">Sign up</string>
    <string name="register_str">Register</string>
    <string name="already_have_an_account_str">Already have an account ?</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="take_picture_title">Upload Picture Option</string>
    <string name="take_picture_description">How do you want to set your picture?</string>
    <string name="close">Close</string>
    <string name="log_as_quest">Login as guest</string>
    <string name="password_length_error">Password must be at least 8 letters</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="user_already_exist">User already exists</string>
    <string name="error">Error</string>
    <string name="enter_first_name">Please enter First Name</string>
    <string name="enter_last_name">Please enter Last Name</string>
    <string name="preferences">Preferences</string>
    <string name="discovery">Discovery</string>
    <string name="discovery_desc">Allow other users to see you</string>
    <string name="men_str">Men</string>
    <string name="women_str">Women</string>
    <string name="max_distance">Maximum Distance:</string>
    <string name="kilometer">Km</string>
    <string name="max_distance_desc">Pick the distance where you are looking for friends</string>
    <string name="age_range_desc">What ages are you looking for</string>
    <string name="hello_guest">Hello guest</string>
    <string name="cant_filter_guest">We are sorry, but you can\'t filter as a guest</string>
    <string name="cant_menu_guest">We are sorry, but you can only click home and logout as a guest</string>
    <string name="ok">OK</string>
    <string name="no_more_people">There are no people to show you</string>
    <string name="no_mathces_yet">You don\'t have any matches</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="select_categories_desc">Pick what categories of questions you want to answer</string>
    <string name="sport_title">Sport</string>
    <string name="food_title">Food</string>
    <string name="culture_title">Culture</string>
    <string name="music_title">Music</string>
    <string name="choose_filter_desc">Choose according to which categories to see the compability</string>

    <string name="private_str">Private</string>
    <string name="min_age">Minimum age</string>
    <string name="max_age">Maximum age</string>
    <string name="your_preferences">Your Preference</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="max_distance_km">Max Distance (Km)</string>
    <string name="notification">Notification</string>
    <string name="new_match_notif">New match notification</string>
    <string name="when_got_new_match">When you got a new match</string>
    <string name="new_message_notif">New message notification</string>
    <string name="when_got_new_message">When you got a new meesage</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_new_notif">Vibrate on new notification</string>
    <string name="new_match_with">You matched with</string>
    <string name="about">About</string>
    <string name="we_are">We are development team!</string>
    <string name="version">Version</string>
    <string name="click_here_to_start_chating">Start chating</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="send_message_str">Send message</string>
    <string name="search_chat">Search chat</string>
    <string name="account_setup">Account Setup</string>
    <string name="unmatch_dialog">Are you sure you want to unmatch with</string>
    <string name="no_like">You have no people to show</string>
    <string name="your_likes">Your Likes</string>
    <string name="matches_and_chat">Matches &amp; Chats</string>
    <string name="online_str">Online</string>
    <string name="offline_str">Offline</string>
    <string name="religion">religion</string>
    <string name="travel">travel</string>
    <string name="religion_cap">Religion</string>
    <string name="travel_cap">Travel</string>
    <string name="sent_you">sent you:</string>
    <string name="chat">Chat</string>
    <string name="in_order_to_see_more_people_please_login_or_register">In order to see more people please login or register</string>
    <string name="login_register">Login/Register</string>
    <string name="gender_dialog_error">You must choose at least one field</string>


</resources>