<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/home_item"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/my_profile_item"
            android:icon="@drawable/ic_user"
            android:title="@string/my_profile"/>

        <item
            android:id="@+id/matches_item"
            android:icon="@drawable/ic_your_matches"
            android:title="@string/matches_and_chat"/>

        <item
            android:id="@+id/messages_item"
            android:title="@string/your_likes"/>

        <item
            android:id="@+id/questions_item"
            android:icon="@drawable/ic_information"
            android:title="@string/questions"/>



        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/settings"/>

        <item
            android:id="@+id/logout_item"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>

    </group>
</menu>