<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sign">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_text"
        android:text="@string/sign_up_str"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/title_shape"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_signup"
            android:textColorHint="#000"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="#000"
                android:textSize="30sp"
                android:gravity="center"
                android:hint="@string/e_mail_str"
                android:id="@+id/email_et_signup"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:textColorHint="#000"
            android:layout_below="@+id/email_signup"
            android:layout_marginTop="10dp"
            android:id="@+id/password_signup">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="#000"
                android:textSize="30sp"
                android:gravity="center"
                android:hint="@string/password_str"
                android:id="@+id/password_et_signup"
                android:inputType="numberPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="15dp"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="@color/red_stroke"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/password_signup"
            android:id="@+id/error_et_signup"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_str"
            android:textSize="25sp"
            android:background="@drawable/btn_shape"
            android:padding="15dp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:layout_below="@id/error_et_signup"
            android:layout_centerHorizontal="true"
            android:id="@+id/register_btn_signup"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:id="@+id/sign_up_rl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_str"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/Blue"
            android:textStyle="bold"
            android:padding="5dp"
            android:id="@+id/have_account"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:layout_toEndOf="@id/have_account"
            android:background="@color/transparent"
            android:text="@string/sign_in_str"/>

    </RelativeLayout>


</RelativeLayout>